qiitaリンク先変更

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul class="text_center">
               <li><a href="https://twitter.com/m75cCMbYv5LEsO8" class="twitter" target="_blank">Twitter</a></li>
               <li><a href="https://github.com/" class="github" target="_blank">GitHub</a></li>
-              <li><a href="https://qiita.com/Yuki_Nagaoka" class="Qiita" target="_blank">Qiita</a></li>
+              <li><a href="https://qiita.com/m75cCMbYv5LEsO8" class="Qiita" target="_blank">Qiita</a></li>
               <li><a href="mailto:ntthigashino@icloud.com" class="email" target="_blank">E-mail</a></li>
             </ul>
           </div>
@@ -224,8 +224,9 @@
                 <li>・ユーザーが投稿した全ネタ見る事が出来る</li>
                 <li>・実際にアプリを作る事で基礎文法の知識の定着が出来たと実感</li>
                 <li><span class="red-bold">・20人以上の方々にアプリを使って頂き、ご指摘を頂いてリファクタリングや仕様を改善</span></li>
-                <li>・このアプリをYoutubeで紹介</li>
+                <li><a href="https://youtu.be/ayo5iktxQeM" target="_blank" class="blue-link">・このアプリをYoutubeで紹介</a></li>
                 <li>・AWSへデプロイ成功</li>
+
               </ul>
             </div>
           </section>
