--- a/index.html
+++ b/index.html
@@ -170,11 +170,28 @@
                 </div>
               </section>
               <section>
-                <h4>3.やり切る力</h4>
+                <h4>3.ロジカルに問題を解決する力</h4>
                 <div class="indents">
-                  私にはやり切る力があります。<span class="red-bold">困難な事があっても日々乗り越えて来ました。</span><br>
-                  前職で上司が病気休暇で８ヶ月間おらず、係が僕と１つ年下の人しかおらず、その年下の人も途中体調を崩した中でも、僕は日々の業務をやり切りました。また、スクールのチーム開発で１人が途中離脱したのですが、その人の予定業務は全て僕がやり切りました。<br>
-                  このやり切る力はエンジニアとして働く際にも活きてくると思います。
+                  私はロジカルに問題を解決する力があります。その最たる例は<span class="red-bold">ポートフォリオ</span>です。<br><br>
+                  １　問題発見　　　　<br>
+                  お笑いのネタ作りで苦労している<span class="red-bold">友人の手助け</span>をしたい。（自分がネタ作りに苦労した経験もあって）<br><br>
+                  ２　具体解決立案力　<br>
+                  まず、こちらが用意した何種類かのネタのテンプレートからユーザーに１つネタを選択してもらう。<br>
+                  次に、選択したネタはそれぞれのネタによって物語の展開がある。展開に沿って、ボケの選択肢が与えられてユーザーはそれを全て答えると台本が自動で出来る仕組みとする。<br>
+                  最後に、出来上がった台本を自分で修正してオリジナルの台本にユーザーが仕上げていく。<br>
+                  これらによって、<span class="red-bold">ボケを選択するだけで漫才の骨組み（ネタ設定と話の展開）</span>が出来るので、ネタ作りがすごく楽になる。<br>
+                  そして、投稿したネタをみんなが見る事が出来る機能も付ければ、<span class="red-bold">もっと多くの人のネタ作りの参考</span>にもなると考え、機能を追加した。<br>
+                  （下記のポートフォリオのURLよりアプリを見て頂けると幸いです。）<br><br>
+                  ３　実現力　　　　　<br>
+                  プログラミングによってアプリを作成。
+                  また、このアプリを実現する為には、ネタのテンプレートを作るのが私になるので、私自身がネタ作りに詳しくならないといけない。なので私は、<span class="red-bold">初めてM-1とキングオブコント</span>に出場して、ネタを書く技術を磨き、芸人にもネタの相談を行った。<br><br>
+                  ４　提供力　　　　　<br>
+                  ユーザーに提供<span class="red-bold">（30人）</span>＋　<span class="red-bold">現役エンジニア</span>の方々からフィードバック（３名）<br><br>
+                  ５　改善力　　　　　<br>
+                  ユーザーと現役エンジニアから指摘頂いた事の修正。
+                  指摘された個数は<span class="red-bold">約50個</span>ほどですが、<span class="red-bold">全て解決しました。</span>
+                  指摘した頂いた事は概ね下記URLに有ります。
+                  https://github.com/kasyu-create/manzai/issues
                 </div>
               </section>
             </div>
