文言の変更等の微修正

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container">
 
         <div class="left_space">
-          <h4>大学で落語していた時</h4>
+          <h4>大体こんな顔してます</h4>
           <img src="image/IMG_3770.JPG" class="profile_image" alt="">
           <h4>前職在籍時（一番手前です）</h4>
           <img src="image/IMG_3774.jpeg" class="profile_image" alt="">
@@ -90,7 +90,7 @@
               <i class="fas fa-walking"></i>
             </div>
             <div class="info">
-              <h3 class="top_info">エンジニアとして</h3>
+              <h3 class="top_info">エンジニアとしての簡単な経歴</h3>
               <ul>
                 <li>
                   ・２０２０年１０月：株式会社ゼロイチ入社（正社員）<br>
@@ -300,7 +300,7 @@
                 <span class="red-bold">目標にしていた半年間で会社員時代の給料を超える</span>という目標を達成出来なかったです。<br>
                 目標を掲げたその日から、<span class="red-bold">達成出来なければ私にYoutuberとしての実力がない事の証明</span>と思っていました。<br>
                 そして<span class="red-bold">達成出来なければエンジニアに戻る</span>事も挑戦する前から決めていました。<br>
-                でも挑戦した事は全く後悔していません。素晴らしい日々でした。
+                しかし挑戦した事は全く後悔していません。素晴らしい日々でした。
               </div>
             </div>
           </section>
@@ -348,7 +348,7 @@
               <div class="info">
                 <h4 class="top_info">これから目指すエンジニア像</h4>
                 <div class="indent">
-                  <span class="red-bold">まずはフルスタックエンジニアになります</span><br>
+                  <span class="red-bold">まずはフルスタックエンジニアになります。</span><br>
                   上司からこいつに任せておけばとりあえずコーディングは大丈夫と思って頂けてような、<br>
                   <span class="red-bold">フロントからバックエンドやインフラといった幅広く携わる事が出来る</span>フルスタックなエンジニアになります。<br>
                   その後は作業者から仕様書を書くなどより上流に携わっていきたいと考えています。
@@ -364,10 +364,9 @@
                 <div class="indents">
                   <ul>
                     <li>
-                      1.行動と
-                      結果を出す<br>
+                      1.行動と結果を出す<br>
                       <div class="indent">
-                        私には目的を達成する為に動く行動力があります。<br>
+                        私には目的を達成する為に動く行動力とそして結果も出せます。<br>
                         公務員を辞めて<span class="red-bold">未経験から独学でエンジニアとして就職</span>して在籍した会社でたくさんの開発経験をしました。<br>
                         Youtubeに挑戦してチャンネル登録者が<span class="red-bold">半年で2.3万人</span><br>
                         Tiktokのフォロワーが<span class="red-bold">1年で1.8万人</span>を達成しました。<br>
