ポートフォリオ経験業務追加

--- a/index.html
+++ b/index.html
@@ -62,11 +62,16 @@
           <img src="image/IMG_3770.JPG" class="profile_image" alt="">
           <h4>前職在籍時（一番手前です）</h4>
           <img src="image/IMG_3774.jpeg" class="profile_image" alt="">
+          <h4>携わったECサイト１（一部です）</h4>
+          <img src="image/IMG_3777.png" class="profile_image" alt="">
+          <h4>携わったECサイト２（一部です）</h4>
+          <img src="image/IMG_3778.png" class="profile_image" alt="">
           
           <div class="sns">
             <ul class="text_center">
               <li><a href="https://twitter.com/m75cCMbYv5LEsO8" class="twitter" target="_blank">Twitter</a></li>
               <li><a href="https://github.com/" class="github" target="_blank">GitHub</a></li>
+              <li><a href="https://www.youtube.com/channel/UC57fNg_DVVH3t08Ih1H9QVA" class="icon-youtube" target="_blank">Youtube</a></li>
               <li><a href="https://qiita.com/m75cCMbYv5LEsO8" class="Qiita" target="_blank">Qiita</a></li>
               <li><a href="mailto:ntthigashino@icloud.com" class="email" target="_blank">E-mail</a></li>
             </ul>
@@ -112,7 +117,7 @@
               <h3 class="top_info">携わった主なプロジェクト</h3>
               <ul>
                 <li>
-                  ・プロジェクト　　　　: 某アパレルサイト３社の新規立ち上げをし、その後に運用保守を行う<br>
+                  ・プロジェクト１　　　: 某アパレルサイト３社の新規立ち上げをし、その後に運用保守を行う<br>
                   ・チーム情報　　　　　: リーダー１人　フロントエンドエンジニア２名　バックエンドエンジニア２名
                   <div class="indent">
                   主な開発・実装内容A<br>
@@ -140,6 +145,25 @@
                     全て理解して頂けなくても、<span class="red-bold">一度完走させる事を目標に自分の全ての知見を伝えました。</span>
                     結果的にはなんとなくバックエンド業務を理解して頂けるようにはなりました。しかしその後も同じような業務を繰り返しているサポートしている内に、
                     <span class="red-bold">その方はバックエンド側もある程度精通された貴重な人材となっていました。</span>
+                  </div>
+                </li>
+                <br><br>
+                <li>
+                  ・プロジェクト２　　　: 某食品ECサイト立ち上げ運用新規立ち上げをし、その後に運用保守を行う<br>
+                  ・チーム情報　　　　　: リーダー１人　フロントエンドエンジニア２名　バックエンドエンジニア２名
+                  <div class="indent">
+                  主な開発・実装内容<br>
+                      【どのような機能の開発・実装か】<br>
+                      <span class="red-bold">バリデーションの実装や管理画面でのCRUD処理やmigrationやseedersなどのDB管理</span>を任されました。
+                      その後の運用保守はクライアントからの要望に応じて、自分でコーディングして<span class="red-bold">AWSへデプロイ</span>を１人で行っていました。<br><br>
+                      【課題・問題点】<br>
+                      <span class="red-bold">プログラミング未経験の状態から始めて携わった業務</span>でした。
+                      ファイルの量から書かれたコードの量に裏側で行われている処理の多さに<span class="red-bold">自分がどこまで早くキャッチアップ出来るかが問題</span>でした。
+                      さらになんとか実装した後にも、<span class="red-bold">AWSのデプロイ作業を任されたのですが、AWSの知識がほとんど無かったので無事にデプロイ出来るのか</span>が問題でした。<br><br>
+                      【打ち手・使用した技術】<br>
+                      要件定義の資料がなかったので、<span class="red-bold">まず全て知っている上司に裏側の処理やコードの説明を受けながら実装に入りました。</span>どこまで早く自分がキャッチ出来るかは、<span class="red-bold">コードを読みまくりその上で分からない所は上司に聞くの繰り返しで解決しました。</span>
+                      そこを乗り越えるとLaravelの知識やバックエンド側のCRUD処理は入社前に勉強していたので問題なく行えました。
+                      そして、AWSのデプロイ作業に関しても<span class="red-bold">自身で業務後にUdemyでAWSについて学習しました。</span>VPCやサブネットの作成からEC2やRDSの設置などを学び、デプロイ作業が間違ったら大変なので、上司に聞きながらデプロイを行い、<span class="red-bold">その後の運用保守も問題なくデプロイ出来ました。</span>
                   </div>
                 </li>
               </ul>
