ポートフォリオ経歴内容追加

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
           <img src="image/IMG_3777.png" class="profile_image" alt="">
           <h4>携わったECサイト２（一部です）</h4>
           <img src="image/IMG_3778.png" class="profile_image" alt="">
+          <h4>携わったECサイト３（一部です）</h4>
+          <img src="image/IMG_3779.png" class="profile_image" alt="">
+          <h4>携わったECサイト４（一部です）</h4>
+          <img src="image/IMG_3780.png" class="profile_image" alt="">
           
           <div class="sns">
             <ul class="text_center">
@@ -117,7 +121,7 @@
               <h3 class="top_info">携わった主なプロジェクト</h3>
               <ul>
                 <li>
-                  ・プロジェクト１　　　: 某アパレルサイト３社の新規立ち上げをし、その後に運用保守を行う<br>
+                  ・プロジェクト１　　　: 某アパレルサイトの新規立ち上げをし、その後に運用保守を行う<br>
                   ・チーム情報　　　　　: リーダー１人　フロントエンドエンジニア２名　バックエンドエンジニア２名
                   <div class="indent">
                   主な開発・実装内容A<br>
@@ -164,6 +168,45 @@
                       要件定義の資料がなかったので、<span class="red-bold">まず全て知っている上司に裏側の処理やコードの説明を受けながら実装に入りました。</span>どこまで早く自分がキャッチ出来るかは、<span class="red-bold">コードを読みまくりその上で分からない所は上司に聞くの繰り返しで解決しました。</span>
                       そこを乗り越えるとLaravelの知識やバックエンド側のCRUD処理は入社前に勉強していたので問題なく行えました。
                       そして、AWSのデプロイ作業に関しても<span class="red-bold">自身で業務後にUdemyでAWSについて学習しました。</span>VPCやサブネットの作成からEC2やRDSの設置などを学び、デプロイ作業が間違ったら大変なので、上司に聞きながらデプロイを行い、<span class="red-bold">その後の運用保守も問題なくデプロイ出来ました。</span>
+                  </div>
+                </li>
+                <br><br>
+                <li>
+                  ・プロジェクト３　　　: 某アパレルサイトの新規立ち上げをし、その後に運用保守を行う<br>
+                  ・チーム情報　　　　　: リーダー１人　フロントエンドエンジニア２名　バックエンドエンジニア２名
+                  <div class="indent">
+                  主な開発・実装内容A<br>
+                      【どのような機能の開発・実装か】<br>
+                      <span class="red-bold">お友達紹介機能</span>でクーポン発行<br>
+                      新規登録時にもらったポイントが期限切れした際に<span class="red-bold">メールでアナウンスするバッチ実装</span><br><br>
+                      【課題・問題点】<br>
+                      お友達紹介機能でクーポン発行ですが、<span class="red-bold">顧客とクーポン情報が必要</span>だったので、<span class="red-bold">これら２つの情報をどうデータとして管理するのかが</span>自分の中で課題でした。<br>
+                      また、新規登録時にもらったポイントが期限切れした際にメールでアナウンスするバッチ実装ですが、期限切れ１週間前に顧客メールアドレスにメールをするのですが、<span class="red-bold">バッチ処理であるcronの書き方やメールの送信が初めて</span>だったので、自分で実装出来るかが課題でした。
+                      <br><br>
+                      【打ち手・使用した技術】<br>
+                      まずお友達紹介機能でクーポン発行ですが、
+                      顧客がお友達紹介をした時点で<span class="red-bold">couponとcustomerの中間テーブルとなるcoupon_coustomerテーブルを作成</span>しました。
+                      これにより<span class="red-bold">顧客とクーポン情報を両方把握出来る</span>ようにしました。
+                      実装として紹介された側がクーポンコードを入力した時点で紹介者側と紹介された側にクーポンが適用されるようになっています。<br>
+                      また、新規登録時にもらったポイントが期限切れした際にメールでアナウンスするバッチ実装ですが、
+                      <span class="red-bold">cronの書き方は調べつつ他の書き方を見ながら対応</span>し、顧客の抽出は<span class="red-bold">1年前から1週間後を計算してWHERE条件で抽出</span>し、
+                      メールの送信は同僚が似たような実装をした事があるとの事だったので、それを参考にして実装を行いました。
+                  </div>
+                  <br>
+                  <div class="indent">
+                  主な開発・実装内容B<br>
+                    【自分が携わった開発】<br>
+                    商品詳細を開いたタイミングで<span class="red-bold">レコメンドアイテムを表示</span><br><br>
+                    【課題・問題点】<br>
+                    商品詳細に表示するレコメンドアイテムで、クライアント側の要望が二転三転し、<span class="red-bold">どの条件で商品を優先して表示させるべきかが定まっていなかった。</span>
+                    <br><br>
+                    【打ち手・使用した技術】<br>
+                    決定事項として、<span class="red-bold">同じカテゴリーかつ新着順で表示するという最低条件は決まっていた</span>ので、
+                    フレームワークであったFuelPHPの該当DBファイルにSQLを書いて、
+                    <span class="red-bold">itemテーブルから開いた商品と同じカテゴリーID（変数でpresenterから渡しています）をWHERE条件で抽出し、
+                    ORDER BYで新着順にしてフロント側で表示</span>させました。<br>
+                    その後に最終決定で開いた商品と同じブランドのものをレコメンドで表示させて欲しいという事だったので、
+                    <span class="red-bold">WHERE条件にブランドも追加して解決</span>しました。
                   </div>
                 </li>
               </ul>
