プロジェクト内容の記載の追加

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                   <div class="indent">
                   主な開発・実装内容A<br>
                       【どのような機能の開発・実装か】<br>
-                      お客様から頂いた<span class="red-bold">商品情報や前サイトの顧客情報や受注情報などをDBに新規立ち上げ前に入れる。</span>そしてその後の保守運用を行う。<br><br>
+                      お客様から頂いた<span class="red-bold">商品情報や前サイトの顧客情報や受注情報などをDBに新規立ち上げ前に入れる。</span><br>
+                      その後の保守運用では<span class="red-bold">商品詳細画面での商品動画の埋め込み</span>（管理画面で<span class="red-bold">個々の商品の動画を登録出来るようにし、</span>フロント側で動画を表示させる）や商品購入時に<span class="red-bold">ギフトラッピング項目の追加（フロント画面の構築と受注完了時に値の登録）</span>などを保守運用の開発では行っていました。<br><br>
                       【課題・問題点】<br>
                       事前に要件定義していた商品や顧客に受注の<span class="red-bold">DBのカラムと頂いたCSVファイルの情報では内容がズレていた。</span>なのでこちら側で準備していたバッチでDBに顧客や商品情報などを入れようとしても取り込めずに、<span class="red-bold">エラーが発生する状況になる事が事前に発覚した。</span><br>
                       問題となっていた部分を解消し、その後にDBに取り込める事が出来たが、<span class="red-bold">必要なDBのカラムに数値が入っていない問題が２箇所発生</span>した。<br><br>
