プロフィール更新

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
       <nav class="menu open flex">
         <ul class="flex hover_blue">
-          <li><a href="#section1">エンジニアとして</a></li>
-          <li><a href="#section2">簡単な経歴</a></li>
-          <li><a href="#section3">Youtuberとして</a></li>
-          <li><a href="#section4">最後に</a></li>
+          <li><a href="#section1">エンジニア（現職）</a></li>
+          <li><a href="#section2">エンジニア（前職時代）</a></li>
+          <li><a href="#section3">エンジニアになるまで</a></li>
+          <li><a href="#section4">Youtuberとして</a></li>
+          <li><a href="#section5">最後に</a></li>
         </ul>
       </nav>
 
@@ -43,10 +44,11 @@
               <p class="profile_top">カテゴリ</p>
             </div>
             <ul class="hover_blue">
-              <li><a href="#section1">エンジニアとして</a></li>
-              <li><a href="#section2">簡単な経歴</a></li>
-              <li><a href="#section3">Youtuberとして</a></li>
-              <li><a href="#section4">最後に</a></li>
+              <li><a href="#section1">エンジニア（現職）</a></li>
+              <li><a href="#section2">エンジニア（前職時代）</a></li>
+              <li><a href="#section3">エンジニアになるまで</a></li>
+              <li><a href="#section4">Youtuberとして</a></li>
+              <li><a href="#section5">最後に</a></li>
             </ul>
           </div>
         </div>
@@ -54,29 +56,27 @@
     </header>
 
     <section class="text-center pt_70" id="section1">
-      <div class="front_text">エンジニアとして<h2 class="back_text">エンジニアとして</h2></div>
+      <div class="front_text">エンジニア（現職）<h2 class="back_text">エンジニア（現職）</h2></div>
       <div class="container">
 
         <div class="left_space">
           <h4>大体こんな顔してます</h4>
           <img src="image/IMG_3770.JPG" class="profile_image" alt="">
-          <h4>前職在籍時（一番手前です）</h4>
-          <img src="image/IMG_3774.jpeg" class="profile_image" alt="">
-          <h4>携わったECサイト１（一部です）</h4>
-          <img src="image/IMG_3777.png" class="profile_image" alt="">
-          <h4>携わったECサイト２（一部です）</h4>
-          <img src="image/IMG_3778.png" class="profile_image" alt="">
-          <h4>携わったECサイト３（一部です）</h4>
-          <img src="image/IMG_3779.png" class="profile_image" alt="">
-          <h4>携わったECサイト４（一部です）</h4>
-          <img src="image/IMG_3780.png" class="profile_image" alt="">
+          <h4>保育士求人サイト</h4>
+          <img src="image/IMG_3781.png" class="profile_image" alt="">
+          <h4>介護士求人サイト</h4>
+          <img src="image/IMG_3782.png" class="profile_image" alt="">
+          <h4>税理士マッチングサイト</h4>
+          <img src="image/IMG_3783.png" class="profile_image" alt="">
+          <h4>写真販売サービスサイト</h4>
+          <img src="image/IMG_3784.png" class="profile_image" alt="">
           
           <div class="sns">
             <ul class="text_center">
               <li><a href="https://twitter.com/m75cCMbYv5LEsO8" class="twitter" target="_blank">Twitter</a></li>
               <li><a href="https://github.com/" class="github" target="_blank">GitHub</a></li>
               <li><a href="https://www.youtube.com/channel/UC57fNg_DVVH3t08Ih1H9QVA" class="icon-youtube" target="_blank">Youtube</a></li>
-              <li><a href="https://qiita.com/m75cCMbYv5LEsO8" class="Qiita" target="_blank">Qiita</a></li>
+              <!-- <li><a href="https://qiita.com/m75cCMbYv5LEsO8" class="Qiita" target="_blank">Qiita</a></li> -->
               <li><a href="mailto:ntthigashino@icloud.com" class="email" target="_blank">E-mail</a></li>
             </ul>
           </div>
@@ -99,15 +99,20 @@
               <i class="fas fa-walking"></i>
             </div>
             <div class="info">
-              <h3 class="top_info">エンジニアとしての簡単な経歴</h3>
+              <h3 class="top_info">エンジニアとして</h3>
               <ul>
                 <li>
-                  ・２０２０年１０月：株式会社ゼロイチ入社（正社員）<br>
-                  ・勤務期間　　　　：２０２０年１０月〜２０２２年１２月
+                  ・２０２０年１０月：前職入社（正社員）<br>
+                  ・勤務期間　　　　：２０２０年１０月〜２０２２年１１月<br>
+                  ・２０２３年９月　：現職入社（正社員）<br>
+                  ・勤務期間　　　　：２０２３年９月〜現在
                   <div class="indent">
-                    株式会社ゼロイチにて<span class="red-bold">バックエンドエンジニアとして２年以上働いていました。</span>会社に常駐しながら受託会社として保守運用をメインに業務をしていました。<br>
+                    前職にて<span class="red-bold">バックエンドエンジニアとして２年以上働いていました。</span>会社に常駐しながら受託会社として保守運用をメインに業務をしていました。<br>
                     会社では<span class="red-bold">PHPを使ったバックエンド処理</span>やデータ周りを扱う事も多かったので<span class="red-bold">SQLを使ったデータの抽出や管理</span>が多かったです。<br>
-                    チームの規模としては会社のバックエンドエンジニアは４人チームで、Gitを使ってコード管理を行なっていました。
+                    チームの規模としては会社のバックエンドエンジニアは４人チームで、Gitを使ってコード管理を行なっていました。<br>
+                    現職では、バックエンドエンジニアとしてクライアントの要望に応じて作成された仕様書から、<br>
+                    <span class="red-bold">DB設計にテスト仕様書やフォーム定義書を私が作成して開発</span>をしています。<br>
+                    まだ入社にて５ヶ月ですが、<span class="red-bold">写真販売サービスや税理士マッチングサイトに保育士や介護士の求人サイト</span>など幅広く開発に携わっています。
                   </div>
                 </li>
               </ul>
@@ -118,7 +123,120 @@
               <i class="far fa-thumbs-up"></i>
             </div>
             <div id="future" class="info">
-              <h3 class="top_info">携わった主なプロジェクト</h3>
+              <h3 class="top_info">携わった主なプロジェクト（現職）</h3>
+              <ul>
+                <li>
+                  ・プロジェクト１　　　: 保育士介護士の求人サイト運用保守<br>
+                  ・チーム情報　　　　　: バックエンドエンジニア１名
+                  <div class="indent">
+                  主な開発・実装内容A<br>
+                      【どのような機能の開発・実装か】<br>
+                      求人サイト利用者による<span class="red-bold">就職・転職体験談ページの作成</span><br>
+                      管理画面にて登録した就職・転職体験談をフロントにて表示させる<br><br>
+                      【課題・問題点】<br>
+                      転職して初めての仕事だったのでまずは<span class="red-bold">プロダクトの仕様とコードを理解するのが課題</span>でした。<br>
+                      仕様書もなかったので色々と理解するのに時間はかかるのも問題でした。<br>
+                      また、先方と要件が詰めれていないままでの引き継ぎだったので、要件を詰める事も必要でした。<br><br>
+                      【打ち手・使用した技術】<br>
+                      仕様書が無かったので、自分なりサイトを動かしてログを見ながら<span class="red-bold">自分なりの簡易的な仕様書をまずは作成しました。</span><br>
+                      そこから今回の就職・転職体験談ページの<span class="red-bold">要件の整理を行い先方と要件を確定させました。</span><br>
+                      また、最初の開発だったので<span class="red-bold">自分が開発する部分が他の部分に影響しないか</span>いつもより考えながらテーブル設計から開発を行いました。
+                  </div>
+                  <br>
+                  <div class="indent">
+                  主な開発・実装内容B<br>
+                    【どのような機能の開発・実装か】<br>
+                    関東と関西の求人だけでなく、<span class="red-bold">全国の求人を載せるようにする</span><br>
+                    管理画面で全国の求人を登録出来るようにする<br><br>
+                    【課題・問題点】<br>
+                    関東と関西から全国に拡大するので、都道府県や市区町村の追加だけでなく<br>
+                    求人ごとに最寄駅の設定も行うために鉄道会社の追加、東海や九州などのエリアの追加も行う必要があり、<span class="red-bold">追加するDB情報が大量にあったので漏れがないかが課題でした。</span><br>
+                    また、DBの追加をしても鉄道会社と都道府県の紐付けや<br>
+                    求人とエリアの紐付けなど<span class="red-bold">テーブルごとの整合性が大丈夫かどうかが問題</span>でした。<br><br>
+                    【打ち手・使用した技術】<br>
+                    上記の課題や問題に関しては、<span class="red-bold">事前のDB設計を何回も確認して行いました。</span><br>
+                    求人の勤務地は都道府県や市区町村にエリアに、最寄駅に沿線が問題無く紐付けされて登録されているか。沿線や駅や鉄道会社に関しては漏れが無いか、自分の目だけでは不安だったので<br>
+                    <span class="red-bold">ツールを使いながら漏れが無いか確認を行いました。</span><br>
+                    １人で開発していたので、いつも以上に何回も確認しながら問題無く求人の全国対応が出来たのは良かったです。
+                  </div>
+                </li>
+                <br><br>
+                <li>
+                  ・プロジェクト２　　　: 全国の税理士紹介サイトの立ち上げ<br>
+                  ・チーム情報　　　　　: リーダー１人　ディレクター１名　バックエンドエンジニア３名
+                  <div class="indent">
+                  主な開発・実装内容C<br>
+                      【どのような機能の開発・実装か】<br>
+                      全国の<span class="red-bold">税理士紹介サイトの新規立ち上げ</span>を任されました。<br>
+                      仕様書は既に出来ていたので仕様書に基づいた<span class="red-bold">フォーム定義書やテスト仕様書とテーブル設計を行いながら自身で開発</span>も行っていました。<br><br>
+                      【課題・問題点】<br>
+                      初めてテーブル設計やテスト仕様書などのドキュメントの作成も行ったので、<span class="red-bold">仕様通り漏れがないかという部分とテーブル設計が大丈夫かどうが課題</span>でした。<br>
+                      さらに今まで以上にJavascriptなどのフロント部分の開発が多かったので、<span class="red-bold">慣れないフロントエンドの開発に自分がどこまで出来るのかという部分も課題</span>でした。<br><br>
+                      【打ち手・使用した技術】<br>
+                      フォーム定義書とテスト仕様書は過去のを参考にしながら出来たのですが、テーブル設計は直属の上司が社長だったので、<span class="red-bold">社長と相談しながらテーブル設計は作っていきました。</span><br>
+                      テーブルを１から設計するとなると<span class="red-bold">命名からテーブルごとの関係からカラムの設定値と大変でしたがやり切りました。</span>テーブルの数は合計で50個ぐらいでした。<br>
+                      また、JSでのフロント開発についてはJSの基礎から分かっていない事が多かったので、まずは分かる部分であるバックエンドの部分から実装を行い、分かっていないJSの部分は<span class="red-bold">家に帰って平日の夜や土日で勉強してから会社でJSの実装をして</span>分からない部分はまた家で勉強しての繰り返しで実装していきました。<br>
+                      当初はこんなサイト自分で１から携わるのは厳しいと感じていましたが、やってみるとそこまで大変な事でもなかったので、<span class="red-bold">実際にやってみる事が一番大事</span>だと感じました。
+                  </div>
+                </li>
+                <br><br>
+                <li>
+                  ・プロジェクト３　　　: 写真販売サイトの立ち上げ<br>
+                  ・チーム情報　　　　　: リーダー１人　バックエンドエンジニア２名
+                  <div class="indent">
+                  主な開発・実装内容D<br>
+                      【どのような機能の開発・実装か】<br>
+                      <span class="red-bold">某スポーツチームの写真販売サイトの立ち上げ</span>を任されました。<br>
+                      プロのカメラマンさんが撮った写真を<span class="red-bold">ファンの方々に向けて写真を販売する</span>というサイトです。<br><br>
+                      【課題・問題点】<br>
+                      設計や実装は当初問題無く出来ていたのですが、<span class="red-bold">メインで開発を行っていた方が退職され、入れ替わる形で僕が</span>このプロジェクトに入りました。<br>
+                      引き継ぎ文書を読んでも不明な点があったので、<span class="red-bold">仕様はどうなっていて、どこまで出来ていて、何が出来ていないか自分の目で把握する</span>事が課題でした。<br>
+                      また、テストが全く出来ていない事が分かったので、<span class="red-bold">テストをどうするかが問題</span>でした。<br>
+                      <span class="red-bold">ページごとの仕様に問題は無いか、バッチは問題無く動くのか、先方との認識にズレは生じていないか、それらをまずは整理</span>しなければいけない状況が問題でした。
+                      <br><br>
+                      【打ち手・使用した技術】<br>
+                      仕様の確認や漏れがないか確認する為に、<span class="red-bold">まずは他のエンジニアと協力しながらテスト仕様書を作成</span>しました。<br>
+                      そこで出てきた修正事項を修正していきながら、<span class="red-bold">次に先方に聞いた方が良い要件の確認などのものは先方に聞きながら開発</span>を行っていきました。<br>
+                      <span class="red-bold">これらを行い仕様はどうなっていて、どこまで出来ていて、何が出来ていないか判断</span>出来て良かったです。<br>
+                      また、バッチの動作確認も行いました。<span class="red-bold">バッチは50個ほどあったので、１つ１つテストしていくのは地味に大変な作業</span>でした。<br>
+                      ログを見ながら値に問題が無いか、<span class="red-bold">メールの送受信は出来ているか。銀行払いやコンビニ払いが問題無くバッチ処理で出来ているか、プリントして頂く印刷会社に注文情報がきちんと届いているか</span>などバッチ１つ１つをテストするのは大変でしたが、地道に行い大きな問題無くリリース出来ました。
+                  </div>
+                  <br>
+                </li>
+              </ul>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+
+
+
+    <section class="text-center pt_70" id="section2">
+      <div class="front_text">エンジニア（前職時代）<h2 class="back_text">エンジニア（前職時代）</h2></div>
+      <div class="container">
+
+        <div class="left_space">
+          <h4>前職在籍時（一番手前です）</h4>
+          <img src="image/IMG_3774.jpeg" class="profile_image" alt="">
+          <h4>食品ECサイト</h4>
+          <img src="image/IMG_3777.png" class="profile_image" alt="">
+          <h4>アパレルECサイト１</h4>
+          <img src="image/IMG_3778.png" class="profile_image" alt="">
+          <h4>アパレルECサイト２</h4>
+          <img src="image/IMG_3779.png" class="profile_image" alt="">
+          <h4>アパレルECサイト３</h4>
+          <img src="image/IMG_3780.png" class="profile_image" alt="">
+          
+        </div>
+
+        <div class="right_space">
+          <section class="flex">
+            <div class="icon">
+              <i class="far fa-thumbs-up"></i>
+            </div>
+            <div id="future" class="info">
+              <h3 class="top_info">携わった主なプロジェクト（前職）</h3>
               <ul>
                 <li>
                   ・プロジェクト１　　　: 某アパレルサイトの新規立ち上げをし、その後に運用保守を行う<br>
@@ -219,8 +337,8 @@
 
 
 
-    <section class="text-center back_dark padding_top" id="section2">
-      <div class="front_text">簡単な経歴<h2 class="back_text">簡単な経歴</h2></div>
+    <section class="text-center back_dark padding_top" id="section3">
+      <div class="front_text">エンジニアになるまで<h2 class="back_text">エンジニアになるまで</h2></div>
       <div class="container">
 
         <div class="left_space">
@@ -259,21 +377,21 @@
               <i class="far fa-lightbulb"></i>
             </div>
             <div class="info">
-              <h4 class="top_info">王寺町役場に就職</h4>
+              <h4 class="top_info">市役所の職員に就職</h4>
               <ul>
                 <li>
                   ・2018年3月 ：立命館大学文学部卒業<br>
-                  ・同年に奈良県王寺町役場に就職
+                  ・同年に市役所の職員に就職
                   <div class="indent">
                     「無駄なプライドがなく、メンタル強そう」
                     という理由でタスクが同期の中で一番多い課に配属。
-                    タスクが多い中、町施設の貸し出し及び管理を紙の台帳から、データで管理するようにし、外部からもチェック可能に仕様を変更しました。結果、使用者にとっても<span class="red-bold">利用が楽になったと意見を頂き、タスクを減らす事にも成功</span>しました。<br>
+                    タスクが多い中、施設の貸し出し及び管理を紙の台帳から、データで管理するようにし、外部からもチェック可能に仕様を変更しました。結果、使用者にとっても<span class="red-bold">利用が楽になったと意見を頂き、タスクを減らす事にも成功</span>しました。<br>
                   </div>
                 </li>
                 <li>・2019年4月 ：別の課に移動</li>
                 <li>
                   <div class="indent">
-                    町の体育館利用者数とその売上が下がっていた為、それらの向上が求められた。<br>
+                    体育館利用者数とその売上が下がっていた為、それらの向上が求められた。<br>
                     まず、<span class="red-bold">どの時間帯ごとの人数と年齢層のデータをとった結果、</span>午前中が高齢者の利用が突出して多く、利用出来ていない団体が複数いる事が分かりました。<br>
                     そこで、午前中の料金を上げて、午後の料金を下げる事で午前中に使用している何団体かが午後の使用に移り、その空いたスペースを利用出来ていなかった団体に提供が出来ました。<br>それによって<span class="red-bold">利用者数と売上は共に前年比より10％向上し、又お客様の満足度も向上しました。</span><br>
                   </div>
@@ -289,7 +407,7 @@
             <div class="info">
               <h4 class="top_info">なぜ公務員を辞めてまでエンジニアになったのか</h4>
               <div class="indent">
-                <span class="red-bold">プログラミングを通じてまだまだアナログな社会を変えたい</span>からです。<br>前職を通じて、仕事場だけでなく、社会ではたくさんアナログな事が多いと痛感しました。そんなアナログで苦労している方々にプログラミングを通して問題を解決したいと感じた為、エンジニアになりたいと感じました。
+                <span class="red-bold">プログラミングを通じてまだまだアナログな社会を変えたい</span>からです。<br>前職を通じて、仕事場だけでなく、<span class="red-bold">社会ではたくさんアナログな事が多いと痛感</span>しました。そんなアナログで苦労している方々にプログラミングを通して問題を解決したいと感じた為、エンジニアになりたいと感じました。
               </div>
             </div>
           </section>
@@ -314,7 +432,7 @@
     </section>
 
 
-    <section class="text-center padding_top" id="section3">
+    <section class="text-center padding_top" id="section4">
       <div class="front_text">Youtuberとして<h2 class="back_text">Youtuberとして</h2></div>
       <div class="container">
 
@@ -333,7 +451,7 @@
               <i class="fas fa-chalkboard"></i>
             </div>
             <div class="info">
-              <h4 class="top_info">突然Youtuberになった訳</h4>
+              <h4 class="top_info">前職を辞め突然Youtuberになった訳</h4>
               <div>
                 <span class="red-bold">周りが弱く自分でもいけるのでは</span>と思ったからです。<br>
                 Youtubeのチャンネル登録者が<span class="red-bold">半年で2.3万人</span><br>
@@ -351,7 +469,7 @@
               <ul>
                 <li>・時流に乗る大切さ</li>
                 <li>・動画編集やサムネイル作成</li>
-                <li>・自分の実力の無さ</li>
+                <li>・己の実力の無さ</li>
               </ul>
             </div>
           </section>
@@ -394,7 +512,7 @@
         </div>
       </section>
 
-      <section class="text-center back_dark padding_top" id="section4">
+      <section class="text-center back_dark padding_top" id="section5">
         <div class="front_text">最後に<h2 class="back_text">最後に</h2></div>
         <div class="container">
 
@@ -447,10 +565,9 @@
                       2.目標に向かって日々努力が出来る<br>
                       <div class="indent">
                         私は夢や目標に向かって<span class="red-bold">コツコツと努力が出来ます。</span><br>
-                        前職時代は業務時間外でも、<span class="red-bold">業務で分からなかった事は家で調べてキャッチアップしながら、</span><br>
+                        エンジニアで働く時は業務時間外でも、<span class="red-bold">業務で分からなかった事は家で調べてキャッチアップしながら、</span><br>
                         そこで分かった事は他のメンバーとも共有して属人化も防いでいました。<br>
-                        Youtuberとしても再生数を伸ばす為に、他のチャンネルの研究や自分より数字を持っているYoutuberに相談しながら<br>
-                        <span class="red-bold">日々動画編集と撮影をして数字と向き合っていました。</span>
+                        Youtuberとしても再生数を伸ばす為に、他のチャンネルの研究や自分より数字を持っているYoutuberに相談しながら<span class="red-bold">日々動画編集と撮影をして数字と向き合っていました。</span>
                       </div>
                     </li>
                   </ul>
