プロジェクト４追加

--- a/index.html
+++ b/index.html
@@ -203,6 +203,27 @@
                   </div>
                   <br>
                 </li>
+                <li>
+                  ・プロジェクト４　　　: 顔検索機能実装<br>
+                  ・チーム情報　　　　　: リーダー１人　バックエンドエンジニア４名
+                  <div class="indent">
+                  主な開発・実装内容E<br>
+                      【どのような機能の開発・実装か】<br>
+                      幼稚園・保育園向け写真・動画販売システムの管理画面にて、<br><span class="red-bold">１つの写真を選択して、写真から検出される顔をさらに選択</span>すると、<br>
+                      <span class="red-bold">選択した写真と同じ顔が写っている写真を検索結果として表示する機能を開発</span>しました。<br>
+                      【課題・問題点】<br>
+                      まず顔検出や顔検索を行う開発が初めてだった事です。<br>
+                      <span class="red-bold">画像の分析を行う開発が問題無く実装出来るかが課題</span>でした。<br>
+                      そして顔検索機能を実装する際に、必要なDBのテーブルやログの記録内容とその置く場所など、<br><span class="red-bold">顔検索機能を実装する上で必要なものを洗い出した後に漏れが無いかが問題</span>でした。<br>
+                      <br>
+                      【打ち手・使用した技術】<br>
+                      まず、<span class="red-bold">顔検出や顔検索にはAmazon Rekognitionを使用</span>しました。このAWS上のサービスは写真の顔認識や顔の検出だけでなく、全ての写真からの顔の類似性を判断してくれるので、今回の開発に問題無く導入する事が出来ました。<br>
+                      次に、Amazon Rekognitionの導入が決まったので、必要なテーブル情報を決めていきました。<br><span class="red-bold">画像に写っている顔情報をそれぞれ保存するテーブルと、顔検索を行った後のスコアを保存するテーブルが必要</span>だと感じたので作成しました。<br>
+                      そして、顔検出や顔検索した際にAmazon Rekognitionから返されるログ情報が大量にあった為、<span class="red-bold">S3に新たにログ専用のバケットを生成し、そこにログを保存</span>する事にしました。<br>
+                      実装期間は何ヶ月もかかる大きい開発でしたが、設計からAmazon Rekognitionを使った開発までたくさんの経験が出来て良かったです。<br>
+                  </div>
+                  <br>
+                </li>
               </ul>
             </div>
           </section>
