ポートフォリオ更新2024年9月4日

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       <nav class="menu open flex">
         <ul class="flex hover_blue">
-          <li><a href="#section1">エンジニア（現職）</a></li>
-          <li><a href="#section2">エンジニア（前職時代）</a></li>
+          <li><a href="#section1">エンジニア経歴１</a></li>
+          <li><a href="#section2">エンジニア経歴２</a></li>
           <li><a href="#section3">エンジニアになるまで</a></li>
           <li><a href="#section4">Youtuberとして</a></li>
           <li><a href="#section5">最後に</a></li>
@@ -44,8 +44,8 @@
               <p class="profile_top">カテゴリ</p>
             </div>
             <ul class="hover_blue">
-              <li><a href="#section1">エンジニア（現職）</a></li>
-              <li><a href="#section2">エンジニア（前職時代）</a></li>
+              <li><a href="#section1">エンジニア経歴１</a></li>
+              <li><a href="#section2">エンジニア経歴２</a></li>
               <li><a href="#section3">エンジニアになるまで</a></li>
               <li><a href="#section4">Youtuberとして</a></li>
               <li><a href="#section5">最後に</a></li>
@@ -56,7 +56,7 @@
     </header>
 
     <section class="text-center pt_70" id="section1">
-      <div class="front_text">エンジニア（現職）<h2 class="back_text">エンジニア（現職）</h2></div>
+      <div class="front_text">エンジニア経歴１<h2 class="back_text">エンジニア経歴１</h2></div>
       <div class="container">
 
         <div class="left_space">
@@ -90,7 +90,7 @@
             <div class="info">
               <h3 class="top_info">基本情報</h3>
               東野　陽生（ひがしの　はるき）<br>
-              1995年5月21日生まれ (28歳)<br>
+              1995年5月21日生まれ (29歳)<br>
               大阪府堺市出身
             </div>
           </section>
@@ -102,17 +102,23 @@
               <h3 class="top_info">エンジニアとして</h3>
               <ul>
                 <li>
-                  ・２０２０年１０月：前職入社（正社員）<br>
+                  ・２０２０年１０月：A社入社（正社員）<br>
                   ・勤務期間　　　　：２０２０年１０月〜２０２２年１１月<br>
-                  ・２０２３年９月　：現職入社（正社員）<br>
-                  ・勤務期間　　　　：２０２３年９月〜現在
+                  ・２０２３年９月　：B社入社（正社員）<br>
+                  ・勤務期間　　　　：２０２３年９月〜５月<br>
+                  ・２０２３年６月　：C社（フリーランス）<br>
+                  ・勤務期間　　　　：２０２３年６月〜現在
                   <div class="indent">
-                    前職にて<span class="red-bold">バックエンドエンジニアとして２年以上働いていました。</span>会社に常駐しながら受託会社として保守運用をメインに業務をしていました。<br>
+                    <span class="red-bold">バックエンド側をメインにエンジニアとして３年以上働いています。</span><br>
+                    A社では、会社に常駐しながら受託会社として保守運用をメインに業務をしていました。<br>
                     会社では<span class="red-bold">PHPを使ったバックエンド処理</span>やデータ周りを扱う事も多かったので<span class="red-bold">SQLを使ったデータの抽出や管理</span>が多かったです。<br>
                     チームの規模としては会社のバックエンドエンジニアは４人チームで、Gitを使ってコード管理を行なっていました。<br>
-                    現職では、バックエンドエンジニアとしてクライアントの要望に応じて作成された仕様書から、<br>
-                    <span class="red-bold">DB設計にテスト仕様書やフォーム定義書を私が作成して開発</span>をしています。<br>
-                    まだ入社にて５ヶ月ですが、<span class="red-bold">写真販売サービスや税理士マッチングサイトに保育士や介護士の求人サイト</span>など幅広く開発に携わっています。
+                    B社では、バックエンドエンジニアとしてクライアントの要望に応じて作成された仕様書から、<br>
+                    <span class="red-bold">DB設計にテスト仕様書やフォーム定義書を私が作成して開発</span>をしていました。<br>
+                    <span class="red-bold">写真販売サービスや税理士マッチングサイトに保育士や介護士の求人サイト</span>など幅広く開発に携わっていました。<br>
+                    C社では、電子カルテシステムを作っていました。
+                    主な担当としては、<span class="red-bold">受付票の生成、患者ごとのカレンダー作成や内視鏡検査等での画像登録、出産予定日や最終月経日登録、診療記録登録</span>などの他にもありますが多岐に渡ります。
+                    細かい課題も含めますが、<span class="red-bold">3ヶ月で50の課題に対応して完了</span>させました。
                   </div>
                 </li>
               </ul>
@@ -123,7 +129,7 @@
               <i class="far fa-thumbs-up"></i>
             </div>
             <div id="future" class="info">
-              <h3 class="top_info">携わった主なプロジェクト（現職）</h3>
+              <h3 class="top_info">携わった主なプロジェクト</h3>
               <ul>
                 <li>
                   ・プロジェクト１　　　: 保育士介護士の求人サイト運用保守<br>
@@ -234,11 +240,11 @@
 
 
     <section class="text-center pt_70" id="section2">
-      <div class="front_text">エンジニア（前職時代）<h2 class="back_text">エンジニア（前職時代）</h2></div>
+      <div class="front_text">エンジニア経歴２<h2 class="back_text">エンジニア経歴２</h2></div>
       <div class="container">
 
         <div class="left_space">
-          <h4>前職在籍時（一番手前です）</h4>
+          <h4>在籍時（一番手前です）</h4>
           <img src="image/IMG_3774.jpeg" class="profile_image" alt="">
           <h4>食品ECサイト</h4>
           <img src="image/IMG_3777.png" class="profile_image" alt="">
@@ -257,7 +263,7 @@
               <i class="far fa-thumbs-up"></i>
             </div>
             <div id="future" class="info">
-              <h3 class="top_info">携わった主なプロジェクト（前職）</h3>
+              <h3 class="top_info">携わった主なプロジェクト</h3>
               <ul>
                 <li>
                   ・プロジェクト１　　　: 某アパレルサイトの新規立ち上げをし、その後に運用保守を行う<br>
@@ -428,7 +434,7 @@
             <div class="info">
               <h4 class="top_info">なぜ公務員を辞めてまでエンジニアになったのか</h4>
               <div class="indent">
-                <span class="red-bold">プログラミングを通じてまだまだアナログな社会を変えたい</span>からです。<br>前職を通じて、仕事場だけでなく、<span class="red-bold">社会ではたくさんアナログな事が多いと痛感</span>しました。そんなアナログで苦労している方々にプログラミングを通して問題を解決したいと感じた為、エンジニアになりたいと感じました。
+                <span class="red-bold">プログラミングを通じてまだまだアナログな社会を変えたい</span>からです。<br>実際にエンジニアとして働き、仕事場だけでなく、<span class="red-bold">社会ではたくさんアナログな事が多いと痛感</span>しました。そんなアナログで苦労している方々にプログラミングを通して問題を解決したいと感じた為、エンジニアになりたいと感じました。
               </div>
             </div>
           </section>
@@ -472,7 +478,7 @@
               <i class="fas fa-chalkboard"></i>
             </div>
             <div class="info">
-              <h4 class="top_info">前職を辞め突然Youtuberになった訳</h4>
+              <h4 class="top_info">エンジニアを辞め突然Youtuberになった訳</h4>
               <div>
                 <span class="red-bold">周りが弱く自分でもいけるのでは</span>と思ったからです。<br>
                 Youtubeのチャンネル登録者が<span class="red-bold">半年で2.3万人</span><br>
